--- a/src/components/header/styles.module.scss
+++ b/src/components/header/styles.module.scss
@@ -8,3 +8,13 @@
   padding-left: 20px;
   padding-right: 20px;
 }
+
+.activeLink {
+  color: #FF8200;
+  text-decoration: none;
+}
+
+.link {
+  color: black;
+  text-decoration: none;
+}
