--- a/src/components/mapStatistic/mapContainer/styles.module.scss
+++ b/src/components/mapStatistic/mapContainer/styles.module.scss
@@ -4,6 +4,8 @@
   margin-top: 16px;
 }
 
+
+
 .map {
   width: 75%;
 }
@@ -16,4 +18,17 @@
   margin-top: 16px;
   height: 900px;
   overflow: auto;
+}
+
+.cityBlock::-webkit-scrollbar {
+  width: 10px;
+}
+
+.cityBlock::-webkit-scrollbar-track {
+  background-color: white;
+}
+
+.cityBlock::-webkit-scrollbar-thumb {
+  box-shadow: inset 0 0 6px rgba(255, 130, 0, 0.8);
+  border-radius: 12px;
 }
