--- a/src/components/materialSphere/styles.module.scss
+++ b/src/components/materialSphere/styles.module.scss
@@ -50,3 +50,11 @@
   width: 26%;
   height: 350px;
 }
+
+.fifeWithLoader {
+  width: 37%;
+  height: 350px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
